Actividad 05 de mayo

--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" placeholder="nombre" id="name">
-    <br>
-    <input type="text" placeholder="apellidos" id="lastName">
-    <br>
-    <input type="text" placeholder="edad" id="age">
-    <br>
-    <input type="text" placeholder="curso" id="course">
-    <br>
     <button onclick="imprimir()">imprimir</button>
-
+    <button onclick="mama()">Decirle a mi mama</button>
+    <button onclick="comprar()">Comprar</button>
+    <input type="text" id="respuesta" placeholder="respuesta estudiante">
+    <button onclick="comprobar()">Llamar Lista</button>
     <script src="./JS/script.js"></script>
+    <script src=".//JS/script2.js"></script>
+    <script src=".//JS/script3.js"></script>
 </body>
 </html>
